<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamh.huddleout.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/backgroundImage"
            android:visibility="visible"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:alpha="1"
            app:srcCompat="@drawable/city"
            android:src="@drawable/city" />
    </FrameLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/usernameField"
        android:layout_below="@+id/userNameText"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textColorLink="@android:color/white"
        android:backgroundTint="@android:color/white" />

    <TextView
        android:text="@string/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameField"
        android:layout_alignStart="@+id/usernameField"
        android:layout_marginTop="24dp"
        android:id="@+id/passwordText"
        android:textColor="?android:attr/textColorPrimaryInverse" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/passwordText"
        android:layout_alignEnd="@+id/usernameField"
        android:id="@+id/passwordField"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textColorLink="@android:color/white"
        android:backgroundTint="@android:color/white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/huddloutlogo_blue"
        android:id="@+id/aggregatorImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:src="@mipmap/huddloutlogo_blue"
        android:layout_marginTop="30dp"
        android:tint="@android:color/white" />

    <TextView
        android:text="Sign in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signInTitle"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:layout_below="@+id/aggregatorImage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/userNameText"
        android:layout_below="@+id/signInTitle"
        android:layout_alignStart="@+id/usernameField"
        android:textColor="?android:attr/textColorPrimaryInverse" />

    <Button
        android:text="@string/loginButtonText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:elevation="10dp" />

    <Button
        android:text="@string/registerString"
        android:layout_width="match_parent"
        android:id="@+id/registerButton"
        android:background="@null"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textStyle="normal|italic"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
