<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamh.huddleout.VotingFragment">

    <!-- Group voting layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/voteMasterLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loadLayout"
                android:visibility="gone">

                <TextView
                    android:text="Loading vote..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_marginTop="140dp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loadBar"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/createVoteLayout"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/createTextView"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="No votes found.\nDo you want to create a new vote?"
                    android:layout_marginTop="140dp" />

                <Button
                    android:text="Create Vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/createVoteButtonHidden"
                    android:layout_below="@+id/createTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/voteLayout"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/voteName"
                    android:text="@string/voteOwner"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="18sp"/>

                <TextView
                    android:text="@string/voteDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/voteName"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/voteDescriptionBox"
                    />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/voteDescriptionBox"
                    android:id="@+id/votingOptionsGroup">

                    <RadioButton
                        android:text="@string/voteOption1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionButton1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:text="Current Votes: 2/5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionText1"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:paddingLeft="30dp"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:text="@string/voteOption2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionButton2"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:text="Current Votes: 2/5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionText2"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:paddingLeft="30dp"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:text="@string/voteOption3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionButton3"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:text="Current Votes: 2/5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionText3"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:paddingLeft="30dp"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:text="@string/voteOption4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionButton4"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:text="Current Votes: 2/5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteOptionText4"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:paddingLeft="30dp"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:text="The vote is currently open!\nClose Date: YYYY-MM-DD HH:MM:SS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteStatusText"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"
                        android:paddingTop="20dp" />

                    <Button
                        android:text="Vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/voteButton"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />
                </RadioGroup>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
